# timvink.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
assets/images/: tim.jfif
assets/json_data/: benchmark_python_click_prediction_small.json
assets/visualizations/: gridsearch.html
blog/: index.html
blog/benchmarking-sklearn-python/: index.html
blog/central-limit-theorem/: index.html
blog/closest-coordinates/: index.html
blog/constrained-intelligence/: index.html
blog/databricks-query-speed/: index.html
blog/google-cloud-functions/: index.html
blog/introducing-skorecard/: index.html
blog/is-xgboost-all-we-need/: index.html
blog/mkdocs-for-tech-doc/: index.html
blog/post-balanced-trees/: index.html
blog/reproducible-reports-with-mkdocs/: index.html
blog/streamlit-threshold-app/: index.html
central-limit-theorem/: index.html
closest-coordinates/: index.html
databricks-query-speed/: index.html
docs/: about.md  index.md
google-cloud-functions/: index.html
introducing-skorecard/: index.html
is-xgboost-all-we-need/: index.html
mkdocs-for-tech-doc/: index.html
notebooks/: 20231014-scikitlearn-display-pipelines.ipynb  clt.R
overrides/: home.html
post-balanced-trees/: index.html
reproducible-reports-with-mkdocs/: index.html
scripts/: mkdocs_hooks.py
search/: search_index.json
streamlit-threshold-app/: index.html
(+33 files in other folders)
